--- a/fluid-width-test.html
+++ b/fluid-width-test.html
@@ -4,7 +4,14 @@
 
 <head>
 	<meta charset="utf-8" >
-	<style></style>
+	<style>
+	@media (min-width: 0px) and (max-width: 480px){
+		/* Display a message describing the current browser width */
+		p:after { content: "between 0 and 480px"; }
+		/* Create a single-column layout */
+		img { width: 100%; }
+	}
+</style>
 </head>
 
 <body>
